// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text tests should create simple text block 1`] = `
{
  "type": "text",
  "text": "bla",
  "truncate": "middle"
}
`;

exports[`Text tests should create text block with constrained dynamic width (for ios) 1`] = `
{
  "type": "text",
  "text": "bla",
  "width": {
    "type": "wrap_content",
    "constrained": 1
  }
}
`;

exports[`Text tests should create text with auto_ellipsis 1`] = `
{
  "type": "text",
  "auto_ellipsize": 1,
  "text": "bla bla bla bla bla",
  "width": {
    "type": "fixed",
    "value": 10
  }
}
`;

exports[`Text tests should create text with ellipsis 1`] = `
{
  "type": "text",
  "ellipsis": {
    "text": "...",
    "ranges": [
      {
        "start": 2,
        "end": 3
      }
    ]
  },
  "text": "bla bla bla bla bla bla",
  "width": {
    "type": "fixed",
    "value": 10
  }
}
`;
